--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,18 @@
 {
     "name": "jamesmills/eloquent-uuid",
     "description": "A Laravel Eloquent Model trait for adding and using a uuid with models",
-    "type": "type",
+    "type": "package",
     "license": "MIT",
+    "keywords": ["laravel", "eloquent", "uuid"],
     "authors": [
         {
             "name": "James Mills",
             "email": "james@jamesmills.co.uk"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
+        "php": ">=5.6.0",
+        "laravel/framework": "^5.2.*",
         "ramsey/uuid": "^3.2"
     },
     "autoload": {
