--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "laravel/framework": "5.2.* || 5.4.* || 5.5.* || 5.6.*",
+        "laravel/framework": "5.2.* || 5.4.* || 5.5.* || 5.6.*|| 5.7.*|| 5.8.*",
         "ramsey/uuid": "^3.2"
     },
     "autoload": {
