--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "illuminate/support": "5.2.* || 5.4.* || 5.5.* || 5.6.*|| 5.7.*|| 5.8.*|| 6.0.* || ^6",
+        "illuminate/support": "5.2.* || 5.4.* || 5.5.* || 5.6.*|| 5.7.*|| 5.8.*|| 6.0.* || ^6 || ^7",
         "ramsey/uuid": "^3.2"
     },
     "autoload": {
