--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "illuminate/support": "5.2.* || 5.4.* || 5.5.* || 5.6.*|| 5.7.*|| 5.8.*|| 6.0.* || ^6 || ^7",
-        "ramsey/uuid": "^3.2"
+        "php": ">=7.2.0",
+        "illuminate/support": "5.2.* || 5.4.* || 5.5.* || 5.6.*|| 5.7.*|| 5.8.*|| ^6 || ^7 || ^8",
+        "ramsey/uuid": "^4.1"
     },
     "autoload": {
         "psr-4": {
